plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation libs.guava

    implementation "org.openjfx:javafx-controls:21.0.7"
    implementation "org.openjfx:javafx-fxml:21.0.7"
    implementation 'mysql:mysql-connector-java:8.0.33'
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21.0.7"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'pbl3_gradle.App'
    applicationDefaultJvmArgs = [
            '--module-path', 'C:/Users/DELL/Downloads/openjfx-21.0.7_windows-x64_bin-sdk/javafx-sdk-21.0.7/lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
tasks.register('runJavaFX', JavaExec) {
    group = 'application'
    description = 'Run the JavaFX application manually'
    mainClass.set('pbl3_gradle.App')
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = [
            '--module-path', 'C:/Users/DELL/Downloads/openjfx-21.0.7_windows-x64_bin-sdk/javafx-sdk-21.0.7/lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}


tasks.named('test') {
    useJUnitPlatform()
}